# celery-fastapi-services

./: README.md  pyproject.toml  ruff.toml  setup.cfg
celery_fastapi_routes/: app.py  models.py  router.py  settings.py  tools.py
