[tool.poetry]
name = "celery-fastapi-routes"
version = "0.1.0"
description = ""
authors = ["Vitaliy Mikhalchenko <Vitaliy.Mikhalchenko@bristolcapital.ru>"]
readme = "README.md"
packages = [{include = "celery_fastapi_routes"}]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.4.0"
fastapi = "^0.105.0"
ujson = "^5.8.0"
requests = "^2.31.0"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
ruff = "^0.4.10"
pytest = "^7.4.2"
pytest-celery = "^1.0.0"
gevent = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
